--- a/application/css/style.css
+++ b/application/css/style.css
@@ -14,26 +14,65 @@
 }
 
 .clear {
-	clear: both;
+     clear: both;
+}
+
+img {
+     width: 50%;
+
+}
+
+h1,
+h2 {
+     color: aliceblue;
 }
 
 /******************************************
 /* BASE STYLES
 /*******************************************/
 
-body {
-
-}
+body {}
 
 
 /******************************************
 /* LAYOUT
 /*******************************************/
-header {
+header,
+footer {
+     height: 100px;
+     border: 1px hidden black;
+     background-color: black;
+     text-align: center;
 
 }
 
-footer {
+section {
+     border: 1px hidden black;
+     height: 300px;
+     width: 50%;
+
+     text-align: center;
+
+}
+
+@media screen and (max-width: 600px) {
+     section {
+          background-color: aliceblue;
+          width: auto;
+     }
+
+}
+
+@media (min-width: 601px) and (max-width: 900px) {
+     section {
+          background-color: aliceblue;
+          width: 50%;
+          float: left;
+     }
+
+     .widerCell {
+          display: none;
+     }
 
 }
 
