--- a/application/css/style.css
+++ b/application/css/style.css
@@ -48,7 +48,7 @@ footer {
 
 section {
      border: 1px hidden black;
-     height: 300px;
+     height: auto;
      width: 50%;
 
      text-align: center;
@@ -70,9 +70,12 @@ section {
           float: left;
      }
 
-     .widerCell {
-          display: none;
+     img {
+          width: 25%
      }
+
+
+
 
 }
 
